2012-04-23  Sam Steingold  <sds@gnu.org>

	Do not signal errors inside begin/end_blocking_system_call blocks
	Reported by Don Cohen http://article.gmane.org/gmane.lisp.clisp.devel:22914
	* modules/syscalls/calls.c (POSIX:OPENLOG): use clisp_realloc
	instead of clisp_malloc/free
	(my_chmod, my_chown, my_utime): return status instead of signaling
	(SET-FILE-STAT): signal errors after end_blocking_system_call
	(FILE-INFO): do not jump out of a begin/end_blocking_system_call block

2012-04-23  Sam Steingold  <sds@gnu.org>

	* modules/gdbm/gdbm.c (error_bad_type): fix declaration (for g++)
	* modules/rawsock/rawsock.c (RAWSOCK:CONVERT-ADDRESS): add a cast

2012-04-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS): do not add -Wimplicit when compiling with C++:
	"warning: command line option `-Wimplicit' is valid for C/ObjC but not for C++"

2012-04-20  Sam Steingold  <sds@gnu.org>

	Fix bug#3517196: APPLY reacts differently to dotted list when compiled
	* eval.d (error_apply_dotted): remove; use error_subr_toofew() instead
	(apply_subr, apply_closure): more checks for dotted argument list

2012-04-23  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (logical-pathname-translations): signal TYPE-ERROR on
	non-existent logical host as per ANSI [bug#3520570]

2012-04-19  Sam Steingold  <sds@gnu.org>

	The official binary IP address representation is now a byte
	vector, not an integer.
	* socket.d (string_to_addr1): use data_to_sb8vector instead of
	LEbytes_to_UI
	* modules/rawsock/rawsock.c (CONVERT-ADDRESS): ipv6 is 128 bits,
	not 64; accept byte vectors too
	* modules/rawsock/test.tst: use CONVERT-ADDRESS instead of ip->ve

2012-04-19  Sam Steingold  <sds@gnu.org>

	* array.d (data_to_sbvector): add a modexp function
	(copy_sbvector): use it
	* lispbibl.d (data_to_sbvector): add the prototype
	(data_to_sb8vector): add a #define and export both to clisp.h
	* modules/berkeley-db/bdb.c, modules/clx/new-clx/clx.f:
	* modules/dirkey/dirkey.c, modules/gdbm/gdbm.c: