@@ -1,5 +1,9 @@
 2012-04-23  Sam Steingold  <sds@gnu.org>
 
+	* format.tst: add tests for binding of *FORMAT-CS* [bug#3498026]
+
+2012-04-23  Sam Steingold  <sds@gnu.org>
+
 	* excepsit.tst: add tests for APPLY on dotted lists [bug#3517196]
 
 2012-04-23  Sam Steingold  <sds@gnu.org>
